Openapi-backend-based REST handlers development in progress.
